# plan

./: Makefile  README.md  elm.json  problem-description.docx  problem-description.md
client/: README.md  elm.json
client/src/: Main.elm  Plan.elm  Problem.elm  SchoolOfUnderstanding.elm  Stack.elm  Stream.elm
client/src/SchoolOfUnderstanding/: Group.elm  Slot.elm  Student.elm  Subject.elm  Teacher.elm
client/tests/: GroupTest.elm  PlanTest.elm  SlotTest.elm  StreamTest.elm  StudentTest.elm  TeacherTest.elm
server/: .env  Cargo.toml  README.md
server/src/: lib.rs
server/src/domain/: group.rs  mod.rs  slot.rs  student.rs  subject.rs  teacher.rs
server/src/sender/: mod.rs
server/src/server/: mod.rs  plan.rs
server/src/solver/: mod.rs  strategy.rs
server/src/solver/strategy/: hardcoded.rs  mod.rs
server/static/: index.html
server/static/js/: app.js  plan.js  plan.min.js
src/: Main.elm  Plan.elm  SchoolOfUnderstanding.elm
